# jspace-toolkit

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  demo.ipynb  pyproject.toml  train_lens.py
.github/workflows/: security.yml
jspace/: __init__.py  decomposition.py  discovery.py  interventions.py  jacobian_lens.py  model_adapter.py  readout.py  utils.py  validation.py  viz.py
scripts/: generate_readme_gif.py  inline_image.py  prepare_corpus.py  record_readme_demo.sh  train_lens.py  workspace_geometry.py
tests/: __init__.py  conftest.py  test_bugfixes.py  test_cli.py  test_decomposition.py  test_discovery.py  test_interventions.py  test_jacobian_lens.py  test_model_adapter.py  test_readout.py  test_security.py  test_validation.py  test_viz.py
