[project]
name = "jspace-toolkit"
version = "0.1.0"
description = "Jacobian Lens (J-Lens) and J-Space Toolkit for Transformer Interpretability"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.25.0",
    "safetensors>=0.4.0",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "jupyter",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "black", "ruff", "mypy"]

[project.scripts]
train-jspace-lens = "scripts.train_lens:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jspace*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "slow: tests that download models or run full training",
]
